Upgrade spark (#366)
* Upgrade spark

* Upgrade delta.io component

* CVEs exclude

* Refs

* Trying to remove add-exports option

* Bring it back...

* Provide OSSINDEX secrets

* UDF compatibility options in user guide

* Unify references

* Upgrade lz4

* Bring CVEs back

* Upgrade zookeeper

* PK upgrade

* Upgrade lz4-java

* Upgrade log4j

* Upgrade logback

* Change org.lz4 group back

* Fix lz4 version

* Upgrade aws sdk

* Revert AWS sdk back

* Need to upgrade both deps

* Upgrade jersey

* Netty upgrade

* Trying to upgrade orc-core

* Exclude CVE in aircompresson

* Cleanup

* Change docker-db version

* Update docker-db version in PK

* Bring back orc 1.9.x

* Update changelog

* Experimental upgrade to aircompressor-v3

* Revert "Experimental upgrade to aircompressor-v3"

This reverts commit dc9fb8f8b265aa1446f660fdc61e8ea7f0fbaa22.